--- a/static/sass/pages/_skyfly.scss
+++ b/static/sass/pages/_skyfly.scss
@@ -26,15 +26,18 @@
   .input-group-wrapper {
     max-width: 300px;
     width: 100%;
+    margin-bottom: 10px;
   }
 
   input {
     font-size: 1.5rem;
   }
 
-  &__progress-bar {
+  .progress {
+    margin-top: 2rem;
     display: none;
     max-width: 400px;
+    width: 100%;
   }
 }
 
